--- a/osgi/build.properties
+++ b/osgi/build.properties
@@ -13,6 +13,7 @@ include.${p}.mobile.jar = about.html, \
   xmlns/metatype/metatype.xsd=../xmlns/metatype/metatype.xsd, \
   xmlns/scr/scr.xsd=../xmlns/scr/scr.xsd, \
   xmlns/app/app.xsd=../xmlns/app/app.xsd, \
+  xmlns/dd/dd.xsd=../xmlns/dd/dd.xsd, \
   ddf=../ddf/mobile
 
 expand.${p}.core.jar = ${replace;$(core.specs);.+;[$0]}
