--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -13,9 +13,7 @@ jars.compile.order = \
   osgi.develop.zip, \
   osgi.ri-tck.zip, \
   osgi.mobile.tck.zip, \
-  osgi.mobile.ri.zip, \
-  osgi.mobile.tck.src.zip, \
-  osgi.mobile.ri.src.zip
+  osgi.mobile.ri.zip
 
 bin.includes = osgi.min.jar, \
   osgi.refimpl.jar, \
@@ -27,9 +25,7 @@ bin.includes = osgi.min.jar, \
   osgi.mobile.impls.jar, \
   osgi.mobile.tests.jar, \
   osgi.develop.zip, \
-  osgi.ri-tck.zip, \
-  osgi.tck.zip, \
-  osgi.mobile.ri-tck.zip
+  osgi.ri-tck.zip
   
 
 prebuild =  org.osgi.impl.framework.eclipse, \
@@ -165,9 +161,11 @@ crossref = core, cmpn, mobile
 # files create this subset. All these files can
 # be unzipped in the same directory
 #
-# Full TCK without RI
+# Full Mobile TCK without RI
 
-include.osgi.mobile.tck.zip= [about.html=about-zip.html], \
+include.osgi.mobile.tck.zip= \
+ [about.html=about-zip.html], \
+ LICENSE=LICENSE.jsr232.tck.txt, \
  NOTICE=NOTICE.txt, \
  doc/tck-manual.pdf=doc/tck-manual.pdf, \
  target/build.xml=target/build.xml, \
@@ -189,26 +187,21 @@ include.osgi.mobile.tck.zip= [about.html=about-zip.html], \
  osgi.mobile.jar, \
  osgi.mobile.tests.jar, \
  doc/osgi.core.html=doc/osgi.core.html, \
- doc/osgi.mobile.html=doc/osgi.mobile.html
-
-
-
-# RIs
-include.osgi.mobile.ri.zip= \
- org.osgi.impl.framework.eclipse.jar, \
- osgi.core.impls.jar, \
- osgi.mobile.impls.jar
-
-# RI Source 
-include.osgi.mobile.ri.src.zip= ${replace;${mobile.impls};.+;../$0/src} 
-
-# TCK Source
-# The signature test case is shared so we need to treat it special
-include.osgi.mobile.tck.src.zip=\
+ doc/osgi.mobile.html=doc/osgi.mobile.html, \
  ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
  ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
  ../org.osgi.test.cases.signature/src
- 
+
+
+
+# Mobile RI
+include.osgi.mobile.ri.zip= \
+ [about.html=about-zip.html], \
+ LICENSE=LICENSE.jsr232.ri.txt, \
+ NOTICE=NOTICE.txt, \
+ org.osgi.impl.framework.eclipse.jar, \
+ osgi.mobile.impls.jar
+
 btool.sources=false
 
 custom=true
