Changed names of LICENSES and NOTICE and about.html in ri to not overwrite the other notices. Also added sources to ri

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -188,19 +188,20 @@ include.osgi.mobile.tck.zip= \
  osgi.mobile.tests.jar, \
  doc/osgi.core.html=doc/osgi.core.html, \
  doc/osgi.mobile.html=doc/osgi.mobile.html, \
+ doc/tck-manual.pdf=doc/tck-manual.pdf, \
  ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
  ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
  ../org.osgi.test.cases.signature/src
 
-
-
 # Mobile RI
 include.osgi.mobile.ri.zip= \
- [about.html=about-zip.html], \
- LICENSE=LICENSE.jsr232.ri.txt, \
- NOTICE=NOTICE.txt, \
- org.osgi.impl.framework.eclipse.jar, \
- osgi.mobile.impls.jar
+ [about-ri.html=about-zip.html], \
+ LICENSE-RI=LICENSE.jsr232.ri.txt, \
+ NOTICE-RI=NOTICE.txt, \
+ osgi.core.impls.jar, \
+ osgi.mobile.impls.jar, \
+ ${replace;${core.impls};.+;../$0/src}, \
+ ${replace;${mobile.impls};.+;../$0/src}
 
 btool.sources=false
 
