Added src zips for mobile ri and tck

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -201,6 +201,20 @@ include.osgi.mobile.ri.zip= \
  osgi.core.impls.jar, \
  osgi.mobile.impls.jar, \
  ${replace;${mobile.impls};.+;../$0/src}
+ 
+include.osgi.mobile.ri.src.zip = \
+ [about-ri-src.html=about-zip.html], \
+ LICENSE-RI-SRC=LICENSE.jsr232.ri.txt, \
+ NOTICE-RI-SRC=NOTICE.txt, \
+ ${replace;${mobile.impls};.+;../$0/src}
+
+include.osgi.mobile.tck.src.zip = \
+ [about-tck-src.html=about-zip.html], \
+ LICENSE-TCK-SRC=LICENSE.jsr232.ri.txt, \
+ NOTICE-TCK-SRC=NOTICE.txt, \
+ ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
+ ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
+ ../org.osgi.test.cases.signature/src
 
 btool.sources=false
 
