--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -200,7 +200,8 @@ include.osgi.mobile.ri.zip= \
  NOTICE-RI=NOTICE.txt, \
  osgi.core.impls.jar, \
  osgi.mobile.impls.jar, \
- ${replace;${mobile.impls};.+;../$0/src}
+
+# ${replace;${mobile.impls};.+;../$0/src}
  
 include.osgi.mobile.ri.src.zip = \
  [about-ri-src.html=about-zip.html], \
