--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -188,34 +188,19 @@ include.osgi.mobile.tck.zip= \
  osgi.mobile.tests.jar, \
  doc/osgi.core.html=doc/osgi.core.html, \
  doc/osgi.mobile.html=doc/osgi.mobile.html, \
- doc/tck-manual.pdf=doc/tck-manual.pdf, \
  ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
  ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
  ../org.osgi.test.cases.signature/src
+
+
 
 # Mobile RI
 include.osgi.mobile.ri.zip= \
- [about-ri.html=about-zip.html], \
+ [about.html=about-zip.html], \
  LICENSE-RI=LICENSE.jsr232.ri.txt, \
- NOTICE-RI=NOTICE.txt, \
- osgi.core.impls.jar, \
- osgi.mobile.impls.jar, \
-
-# ${replace;${mobile.impls};.+;../$0/src}
- 
-include.osgi.mobile.ri.src.zip = \
- [about-ri-src.html=about-zip.html], \
- LICENSE-RI-SRC=LICENSE.jsr232.ri.txt, \
- NOTICE-RI-SRC=NOTICE.txt, \
- ${replace;${mobile.impls};.+;../$0/src}
-
-include.osgi.mobile.tck.src.zip = \
- [about-tck-src.html=about-zip.html], \
- LICENSE-TCK-SRC=LICENSE.jsr232.ri.txt, \
- NOTICE-TCK-SRC=NOTICE.txt, \
- ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
- ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
- ../org.osgi.test.cases.signature/src
+ NOTICE=NOTICE.txt, \
+ org.osgi.impl.framework.eclipse.jar, \
+ osgi.mobile.impls.jar
 
 btool.sources=false
 
