I guess core.impls is needed

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -200,6 +200,7 @@ include.osgi.mobile.ri.zip= \
  LICENSE-RI=LICENSE.jsr232.ri.txt, \
  NOTICE=NOTICE.txt, \
  org.osgi.impl.framework.eclipse.jar, \
+ osgi.core.impls.jar, \
  osgi.mobile.impls.jar
 
 btool.sources=false
