Just creates coverage HTML now

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -120,15 +120,15 @@ include.osgi.ri-tck.zip= \
  osgi.core.jar, \
  osgi.core.impls.jar, \
  osgi.core.tests.jar, \
- osgi.core.xml, \
+ doc/osgi.core.html, \
  osgi.cmpn.jar, \
  osgi.cmpn.impls.jar, \
  osgi.cmpn.tests.jar, \
- osgi.cmpn.xml, \
+ doc/osgi.cmpn.html, \
  osgi.mobile.jar, \
  osgi.mobile.impls.jar, \
  osgi.mobile.tests.jar, \
- osgi.mobile.xml
+ doc/osgi.mobile.html
 
 include.osgi.develop.zip = \
  [about.html=about-zip.html], \
@@ -207,5 +207,4 @@ btool.sources=false
 
 custom=true
 verbose=false
-
 
