--- a/org.osgi.test.tool/.classpath
+++ b/org.osgi.test.tool/.classpath
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="var" path="JRE_LIB">
-		<attributes>
-			<attribute value="http://java.sun.com/j2se/1.4.2/docs/api" name="javadoc_location"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry sourcepath="/osgi.released/osgi.jar" kind="lib" path="/osgi.released/osgi.jar"/>
 	<classpathentry sourcepath="/aQute.constructor/IFC11SRC.ZIP" kind="lib" path="/licensed/jar/ifc11.jar"/>
 	<classpathentry kind="lib" path="/licensed/jar/servlet.jar"/>
