--- a/org.osgi.test.cases.application/.classpath
+++ b/org.osgi.test.cases.application/.classpath
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry sourcepath="/osgi.released/ee.minimum.jar" kind="lib" path="/osgi.released/ee.minimum.jar"/>
-	<classpathentry sourcepath="/osgi.released/osgi.jar" kind="lib" path="/osgi.released/osgi.jar"/>
-	<classpathentry sourcepath="/osgi.released/osgi.internal.jar" kind="lib" path="/osgi.released/osgi.internal.jar"/>
-	<classpathentry sourcepath="/osgi.released/ee.foundation.jar" kind="lib" path="/osgi.released/ee.foundation.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.impl.bundle.midletcontainer"/>
-	<classpathentry kind="output" path="src"/>
+	<classpathentry path="src" kind="src"/>
+	<classpathentry path="/osgi.released/ee.foundation.jar" kind="lib" sourcepath="/osgi.released/ee.foundation.jar"/>
+	<classpathentry path="/osgi.released/osgi.jar" kind="lib" sourcepath="/osgi.released/osgi.jar"/>
+	<classpathentry path="/osgi.released/osgi.internal.jar" kind="lib" sourcepath="/osgi.released/osgi.internal.jar"/>
+	<classpathentry path="/org.osgi.impl.bundle.midletcontainer" combineaccessrules="false" kind="src"/>
+	<classpathentry path="src" kind="output"/>
 </classpath>
