testcond.jar must be part of mobile tck

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -174,6 +174,7 @@ include.osgi.mobile.tck.zip= \
  target/keystore=target/keystore, \
  director/build.xml=director/build.xml, \
  director/osgi.properties=director/osgi.properties, \
+ testcond.jar, \
  osgi.min.jar, \
  osgi.target.jar, \
  org.osgi.impl.framework.eclipse.jar, \
