Btool was made more aggressive in finding imports. This caused the DefaultTestCase class to get a reference to java.servlet.http, which it did not have before. This import stopped both the target and the osgi.min.jar from loading. The current fix is temporary, the target has now a hard coded import to ignore the http references (DefaultTestCase is never used on the target and due to limitations, we cannot require http there) and the osgi.min.jar has become independent of servlet.jar.

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -39,9 +39,6 @@ prebuild =  org.osgi.impl.framework.eclipse, \
 include.osgi.min.jar = \
  org.osgi.impl.service.http.jar, \
  org.osgi.impl.service.log.jar, \
- apache/servlet.jar=../licensed/jar/servlet.jar, \
- apache/LICENSE=../licensed/licenses/ASL-2.0.txt, \
- NOTICE=NOTICE.txt, \
  about.html
 expand.osgi.min.jar = org.osgi.tools.group, \
  [org.osgi.test.shared], \
@@ -110,6 +107,7 @@ include.osgi.ri-tck.zip= \
  director/osgi.properties=director/osgi.properties, \
  director/test.properties=director/test.properties, \
  osgi.min.jar, \
+ servlet.jar, \
  osgi.target.jar, \
  testcond.jar, \
  org.osgi.test.cases.testtool.jar, \
@@ -149,6 +147,7 @@ include.osgi.develop.zip = \
  osgi.cmpn.jar, \
  osgi.mobile.jar, \
  osgi.min.jar, \
+ servlet.jar, \
  osgi.director.jar, \
  org.osgi.tools.console.jar, \
  osgi.refimpl.jar
@@ -176,6 +175,7 @@ include.osgi.mobile.tck.zip= \
  director/osgi.properties=director/osgi.properties, \
  testcond.jar, \
  osgi.min.jar, \
+ servlet.jar, \
  osgi.target.jar, \
  org.osgi.impl.framework.eclipse.jar, \
  osgi.jar, \
