--- a/osgi.test/build.xml
+++ b/osgi.test/build.xml
@@ -7,6 +7,7 @@
 			<fileset dir="${workspace}/org.osgi.test.cases.deploymentadmin.mo/delivered" />
 		</copy>
 		<copy file="${workspace}/cnf/certificate/.keystore" tofile="target/keystore" overwrite="true"/>
+		<copy file="${workspace}/licensed/jar/servlet.jar" tofile="servlet.jar" overwrite="true"/>
 	</target>
 
 	<target name="crossref">
