NOTICE should always go with about.html

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -39,6 +39,7 @@ prebuild =  org.osgi.impl.framework.eclipse, \
 include.osgi.min.jar = \
  org.osgi.impl.service.http.jar, \
  org.osgi.impl.service.log.jar, \
+ NOTICE=NOTICE.txt, \
  about.html
 expand.osgi.min.jar = org.osgi.tools.group, \
  [org.osgi.test.shared], \
