--- a/org.osgi.impl.service.component/build.xml
+++ b/org.osgi.impl.service.component/build.xml
@@ -6,6 +6,6 @@
 	The implementation is supplied by Eclipse Equinox.
 	-->
 	<target name="init" depends="master.init">
-		<copy file="${workspace}/licensed/jar/org.eclipse.equinox.ds_1.0.0.jar" tofile="${project}/${project.name}.jar" verbose="${verbose}" preservelastmodified="true"/>
+		<copy file="${workspace}/licensed/jar/org.eclipse.equinox.ds.jar" tofile="${project}/${project.name}.jar" verbose="${verbose}" preservelastmodified="true"/>
 	</target>
 </project>
