*** empty log message ***

--- a/ddf/.settings/org.eclipse.core.resources.prefs
+++ b/ddf/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Thu Jun 22 01:06:20 EDT 2006
+#Tue Jul 11 08:46:13 CEST 2006
 eclipse.preferences.version=1
+encoding//mobile/org.osgi.service.cm.ddf=UTF-8
 encoding//xml/vb.xml=ISO-8859-1
 encoding/<project>=UTF-8
