Moved the DefaultTestCase to its own package

--- a/osgi.internal/build.properties
+++ b/osgi.internal/build.properties
@@ -4,6 +4,7 @@ expand.osgi.internal.jar = \
  [org.osgi.tools.command], \
  [org.osgi.test.service], \
  [org.osgi.test.cases.util],\
+ [org.osgi.test.cases.util.director],\
  [org.osgi.test.cases.logproxy],\
  [org.osgi.tools.group], \
  [org.osgi.test.shared]
