--- a/templates/org.osgi.test.cases.template/.project
+++ b/templates/org.osgi.test.cases.template/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>osgi.test.template</name>
+	<name>org.osgi.test.cases.template</name>
 	<comment></comment>
 	<projects>
 	</projects>
