--- a/templates/org.osgi.test.cases.template/.classpath
+++ b/templates/org.osgi.test.cases.template/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/osgi.released/osgi.jar"/>
-	<classpathentry sourcepath="/ee.minimum" kind="lib" path="/osgi.released/ee.minimum.jar"/>
-	<classpathentry sourcepath="/org.osgi.test.cases/src" kind="lib" path="/osgi.released/osgi.internal.jar"/>
-	<classpathentry kind="output" path="src"/>
+	<classpathentry path="src" kind="src"/>
+	<classpathentry path="/osgi.released/osgi.jar" kind="lib" sourcepath="/osgi.released/osgi.jar"/>
+	<classpathentry path="/osgi.released/ee.minimum.jar" kind="lib" sourcepath="/osgi.released/ee.minimum.jar"/>
+	<classpathentry path="/osgi.released/osgi.internal.jar" kind="lib" sourcepath="/osgi.released/osgi.internal.jar"/>
+	<classpathentry path="src" kind="output"/>
 </classpath>
