*** empty log message ***

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -45,6 +45,7 @@ expand.osgi.min.jar = org.osgi.tools.group, \
  [org.osgi.test.shared], \
  [org.osgi.test.service], \
  [org.osgi.test.cases.util], \
+ [org.osgi.test.cases.util.director], \
  [org.osgi.tools.command]
 
 # Refimpl. Temporary until we do Mobile
