change to version 4.1. Added all mobile specs to compendium for 4.1

--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -1,7 +1,8 @@
 copyright = Copyright (c) OSGi Alliance (2000, 2006). All Rights Reserved.
-core.release.version=4.0.1
-cmpn.release.version=4.0.1
-mobile.release.version=4
+osgi.release.version=4.1
+core.release.version=4.1
+cmpn.release.version=4.1
+mobile.release.version=4.1
 
 ees = \
  ee.minimum, \
@@ -163,14 +164,19 @@ core.tests =   org.osgi.test.cases.framework.classloading, \
   org.osgi.test.cases.startlevel, \
   org.osgi.test.cases.url
 
-cmpn.specs = org.osgi.service.cm, \
+cmpn.specs = \
+ org.osgi.application, \
+ org.osgi.service.application, \
+ org.osgi.service.cm, \
  org.osgi.service.component, \
+ org.osgi.service.deploymentadmin, \
  org.osgi.service.device, \
  org.osgi.service.event, \
  org.osgi.service.http, \
  org.osgi.service.io, \
  org.osgi.service.log, \
  org.osgi.service.metatype, \
+ org.osgi.service.monitor, \
  org.osgi.service.prefs, \
  org.osgi.service.provisioning, \
  org.osgi.service.upnp, \
@@ -178,38 +184,62 @@ cmpn.specs = org.osgi.service.cm, \
  org.osgi.service.wireadmin, \
  org.osgi.util.measurement, \
  org.osgi.util.position, \
+ org.osgi.util.gsm, \
+ org.osgi.util.mobile, \
  org.osgi.util.tracker, \
- org.osgi.util.xml
+ org.osgi.util.xml, \
+ info.dmtree, \
+ info.dmtree.spi, \
+ info.dmtree.notification, \
+ info.dmtree.notification.spi, \
+ info.dmtree.registry, \
+ info.dmtree.security
  
 cmpn.impls = \
   org.osgi.impl.service.log, \
   org.osgi.impl.bundle.rsh, \
   org.osgi.impl.bundle.jaxp, \
+  org.osgi.impl.bundle.autoconf, \
+  org.osgi.impl.service.application, \
   org.osgi.impl.service.cm, \
   org.osgi.impl.service.component, \
   org.osgi.impl.service.device.basicdriverlocator, \
   org.osgi.impl.service.device.manager, \
   org.osgi.impl.service.event, \
   org.osgi.impl.service.http, \
+  org.osgi.impl.service.deploymentadmin, \
+  org.osgi.impl.service.dmt, \
   org.osgi.impl.service.io, \
   org.osgi.impl.service.metatype, \
+  org.osgi.impl.service.monitor, \
+  org.osgi.impl.service.policy, \
   org.osgi.impl.service.prefs, \
   org.osgi.impl.service.provisioning, \
   org.osgi.impl.service.upnp.cp, \
   org.osgi.impl.service.upnp.cd, \
   org.osgi.impl.service.useradmin, \
-  org.osgi.impl.service.wireadmin
+  org.osgi.impl.service.wireadmin, \
+  org.osgi.impl.bundle.midletcontainer
   
  cmpn.tests = \
+  org.osgi.test.cases.application, \
   org.osgi.test.cases.cm, \
   org.osgi.test.cases.component, \
   org.osgi.test.cases.device, \
+  org.osgi.test.cases.deploymentadmin.mo, \
+  org.osgi.test.cases.deploymentadmin.tc1, \
+  org.osgi.test.cases.deploymentadmin.tc2, \
+  org.osgi.test.cases.dmt.tc1, \
+  org.osgi.test.cases.dmt.tc2, \
+  org.osgi.test.cases.dmt.tc3, \
   org.osgi.test.cases.event, \
   org.osgi.test.cases.http, \
   org.osgi.test.cases.io, \
   org.osgi.test.cases.log, \
   org.osgi.test.cases.measurement, \
   org.osgi.test.cases.metatype, \
+  org.osgi.test.cases.monitor, \
+  org.osgi.test.cases.policy, \
   org.osgi.test.cases.position, \
   org.osgi.test.cases.prefs, \
   org.osgi.test.cases.provisioning, \
