fix for bug 379

--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -262,6 +262,7 @@ mobile.specs = \
  org.osgi.service.cm, \
  org.osgi.service.component, \
  org.osgi.service.deploymentadmin, \
+ org.osgi.service.deploymentadmin.spi, \
  org.osgi.service.event, \
  org.osgi.service.io, \
  org.osgi.service.log, \
