#379 Removed extra.packages from global.properties. They were used in osgi, to make the different spec jars, and in osgi.specs to make the javadoc. In both cases, widlcards are now used to get the spec package and ALL subpackages. This means that spec packages MUST have a common root.

--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -43,14 +43,6 @@ specs = \
  org.osgi.util.tracker, \
  org.osgi.util.xml
 
-extra.packages =  info.dmtree.security, \
- info.dmtree.spi, \
- info.dmtree.notification, \
- info.dmtree.notification.spi, \
- info.dmtree.registry, \
- org.osgi.service.deploymentadmin.spi, \
- org.osgi.service.navigation.control
- 
 
 #  org.osgi.impl.service.application, \
  
@@ -188,12 +180,7 @@ cmpn.specs = \
  org.osgi.util.mobile, \
  org.osgi.util.tracker, \
  org.osgi.util.xml, \
- info.dmtree, \
- info.dmtree.spi, \
- info.dmtree.notification, \
- info.dmtree.notification.spi, \
- info.dmtree.registry, \
- info.dmtree.security
+ info.dmtree
  
 cmpn.impls = \
   org.osgi.impl.service.log, \
@@ -252,17 +239,11 @@ cmpn.impls = \
 
 mobile.specs = \
  info.dmtree, \
- info.dmtree.spi, \
- info.dmtree.notification, \
- info.dmtree.notification.spi, \
- info.dmtree.registry, \
- info.dmtree.security, \
  org.osgi.application, \
  org.osgi.service.application, \
  org.osgi.service.cm, \
  org.osgi.service.component, \
  org.osgi.service.deploymentadmin, \
- org.osgi.service.deploymentadmin.spi, \
  org.osgi.service.event, \
  org.osgi.service.io, \
  org.osgi.service.log, \
