--- a/osgi.specs/build.properties
+++ b/osgi.specs/build.properties
@@ -1,4 +1,4 @@
 custom = true
-javadoc= ${specs},${extra.packages}
+javadoc= ${replace;${specs};^.+$;$0.*}
 ees= ee.foundation, ee.minimum
 ddf = vehiclebody, vehiclechassis, vehicleinterior, vehiclepowertrain
