--- a/osgi/build.properties
+++ b/osgi/build.properties
@@ -1,13 +1,13 @@
 jars.compile.order = ${p}.jar, ${p}.cmpn.jar, ${p}.core.jar, ${p}.mobile.jar
 bin.includes = ${p}.jar, ${p}.cmpn.jar, ${p}.core.jar, ${p}.mobile.jar
 
-expand.${p}.jar = ${replace;${specs};^.*$;[$0.*]}, ${replace;${extra.packages};^.*$;[$0.*]}
+expand.${p}.jar = ${replace;${specs};^.*$;[$0.*]}
 include.${p}.jar = about.html, LICENSE, xmlns/metatype/metatype.xsd=../xmlns/metatype/metatype.xsd, xmlns/scr/scr.xsd=../xmlns/scr/scr.xsd, xmlns/app/app.xsd=../xmlns/app/app.xsd
 
-expand.${p}.cmpn.jar = ${replace;$(cmpn.specs);.+;[$0]}
+expand.${p}.cmpn.jar = ${replace;$(cmpn.specs);.+;[$0.*]}
 include.${p}.cmpn.jar = about.html, LICENSE, xmlns/metatype/metatype.xsd=../xmlns/metatype/metatype.xsd, xmlns/scr/scr.xsd=../xmlns/scr/scr.xsd
 
-expand.${p}.mobile.jar = ${replace;$(mobile.specs);.+;[$0]}
+expand.${p}.mobile.jar = ${replace;$(mobile.specs);.+;[$0.*]}
 include.${p}.mobile.jar = about.html, \
   LICENSE, \
   xmlns/metatype/metatype.xsd=../xmlns/metatype/metatype.xsd, \
