--- a/info.dmtree/.classpath
+++ b/info.dmtree/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry sourcepath="/ee.minimum" kind="lib" path="/osgi.released/ee.minimum.jar"/>
-	<classpathentry kind="lib" path="/osgi.released/osgi.jar"/>
+	<classpathentry kind="lib" path="/osgi.released/ee.minimum.jar" sourcepath="/ee.minimum"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.framework"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
