add pki package export since it is now reference by GCF in foundation 1.1

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -55,7 +55,7 @@ include.osgi.refimpl.jar = ${replace;${impls};$;.jar}, \
  NOTICE=NOTICE.txt, \
  about.html
 expand.osgi.refimpl.jar = org.osgi.tools.group, \
- [javax.microedition.io]
+ [javax.microedition.io], [javax.microedition.pki]
 
  
 # Core
@@ -75,7 +75,7 @@ include.osgi.cmpn.impls.jar = ${replace;${cmpn.impls};$;.jar}, \
  NOTICE=NOTICE.txt, \
  about.html
 expand.osgi.cmpn.impls.jar = org.osgi.tools.group, \
- [javax.microedition.io]
+ [javax.microedition.io], [javax.microedition.pki]
 include.osgi.cmpn.tests.jar = ${replace;${cmpn.tests};$;.jar}
 expand.osgi.cmpn.tests.jar = org.osgi.tools.group
 
@@ -85,7 +85,7 @@ mobile.impls.jars=${replace;${mobile.impls};$;.jar}
 mobile.tests.jars=${replace;${mobile.tests};$;.jar}
 include.osgi.mobile.impls.jar = ${replace;${mobile.impls};$;.jar}
 expand.osgi.mobile.impls.jar = org.osgi.tools.group, \
- [javax.microedition.io]
+ [javax.microedition.io], [javax.microedition.pki]
 include.osgi.mobile.tests.jar = ${replace;${mobile.tests};$;.jar}
 expand.osgi.mobile.tests.jar = org.osgi.tools.group
 
