--- a/osgi.test/director/build.xml
+++ b/osgi.test/director/build.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="project" default="director">
 	
-	<target name="director">
+	<target name="clean">
 		<delete dir="configuration"/> <!-- delete bundles dir to clear permdata -->
+	</target>	
+	
+	<target name="director" depends="clean">
 		<java fork="true" classname="org.eclipse.osgi.framework.launcher.Launcher">	
 			<classpath path="../org.osgi.impl.framework.eclipse.jar"/>
 			<jvmarg value="-Dosgi.install.area=file:"/>
@@ -49,8 +52,7 @@
 		</antcall>
 	</target>
 	
-	<target name="-run">		
-		<delete dir="configuration"/> <!-- delete bundles dir to clear permdata -->
+	<target name="-run" depends="clean">		
 		<java fork="true" classname="org.eclipse.osgi.framework.launcher.Launcher">	
 			<classpath path="../org.osgi.impl.framework.eclipse.jar"/>
 			<jvmarg value="-Dorg.osgi.test.batch.script=${script}"/>
