Added activation policy

--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -75,6 +75,7 @@ impls = \
 #  org.osgi.impl.service.power, \
 
 tests = \
+  org.osgi.test.cases.activationpolicy, \
   org.osgi.test.cases.application, \
   org.osgi.test.cases.cm, \
   org.osgi.test.cases.component, \
@@ -134,7 +135,8 @@ core.specs = org.osgi.framework, \
 
 core.impls =
 
-core.tests =   org.osgi.test.cases.framework.classloading, \
+core.tests =     org.osgi.test.cases.activationpolicy, \
+  org.osgi.test.cases.framework.classloading, \
   org.osgi.test.cases.framework.classpath, \
   org.osgi.test.cases.framework.div, \
   org.osgi.test.cases.framework.dynpkgimport, \
