add activation policy to core test execution script

--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -135,7 +135,8 @@ core.specs = org.osgi.framework, \
 
 core.impls =
 
-core.tests =     org.osgi.test.cases.activationpolicy, \
+core.tests = \
+  org.osgi.test.cases.activationpolicy, \
   org.osgi.test.cases.framework.classloading, \
   org.osgi.test.cases.framework.classpath, \
   org.osgi.test.cases.framework.div, \
