--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -1,8 +1,8 @@
-copyright = Copyright (c) OSGi Alliance (2000, 2006). All Rights Reserved.
-osgi.release.version=4.1
-core.release.version=4.1
-cmpn.release.version=4.1
-mobile.release.version=4.1
+copyright = Copyright (c) OSGi Alliance (2000, 2007). All Rights Reserved.
+osgi.release.version=4.1.0.${project.build}
+core.release.version=4.1.0.${project.build}
+cmpn.release.version=4.1.0.${project.build}
+mobile.release.version=4.1.0.${project.build}
 
 ees = \
  ee.minimum, \
