tweak test result names

--- a/osgi.test/director/osgi.properties
+++ b/osgi.test/director/osgi.properties
@@ -19,8 +19,8 @@ org.osgi.service.http.port=8082
 org.osgi.test.batch.quittarget=true
 org.osgi.test.batch.out=lasttest.xml
 org.osgi.test.compliance.campaign=Regression Testing OSGi Service Platform Release 4
-org.osgi.test.compliance.program=OSGi Service Platform, Release R4
-org.osgi.test.compliance.applicant=OSGi Reference Implementation R4
+org.osgi.test.compliance.program=OSGi Service Platform, Release 4
+org.osgi.test.compliance.applicant=OSGi Service Platform, Release 4 Reference Implementation
 
 # If a mail url is used in org.osgi.test.batch.out
 mail.host=localhost
