--- a/osgi.specs/build.properties
+++ b/osgi.specs/build.properties
@@ -1,4 +1,5 @@
 custom = true
+before = ee.minimum, ee.foundation
 javadoc= ${replace;${specs};^.+$;$0.*}
 ees= ee.foundation, ee.minimum
 ddf = vehiclebody, vehiclechassis, vehicleinterior, vehiclepowertrain
