add jsr 291 RI and TCK build targets

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -13,7 +13,9 @@ jars.compile.order = \
   osgi.develop.zip, \
   osgi.ri-tck.zip, \
   osgi.mobile.tck.zip, \
-  osgi.mobile.ri.zip
+  osgi.mobile.ri.zip, \
+  osgi.jsr291.tck.zip, \
+  osgi.jsr291.ri.zip
 
 bin.includes = osgi.min.jar, \
   osgi.refimpl.jar, \
@@ -205,6 +207,47 @@ include.osgi.mobile.ri.zip= \
  org.osgi.impl.framework.eclipse.jar, \
  osgi.core.impls.jar, \
  osgi.mobile.impls.jar
+
+# Core (JSR 291) TCK
+# For JSR 291 we need a subset. The following 
+# files create this subset. All these files can
+# be unzipped in the same directory
+
+include.osgi.jsr291.tck.zip= \
+ [about.html=about-zip.html], \
+ LICENSE=LICENSE.jsr232.tck.txt, \
+ NOTICE=NOTICE.txt, \
+ doc/tck-manual.pdf=doc/tck-manual.pdf, \
+ target/build.xml=target/build.xml, \
+ target/osgi.properties=target/osgi.properties, \
+ target/policy=target/policy, \
+ target/keystore=target/keystore, \
+ director/build.xml=director/build.xml, \
+ director/osgi.properties=director/osgi.properties, \
+ testcond.jar, \
+ osgi.min.jar, \
+ servlet.jar, \
+ osgi.target.jar, \
+ org.osgi.impl.framework.eclipse.jar, \
+ osgi.jar, \
+ osgi.director.jar, \
+ target/delivered=target/delivered, \
+ director/core.script=director/core.script, \
+ osgi.core.jar, \
+ osgi.core.tests.jar, \
+ doc/osgi.core.html=doc/osgi.core.html, \
+ ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
+ ../org.osgi.test.cases.signature/src
+
+
+
+# Core (JSR 291) RI
+include.osgi.jsr291.ri.zip= \
+ [about.html=about.html], \
+ LICENSE-RI=../licensed/licenses/EPL-1.0.txt, \
+ NOTICE=NOTICE.txt, \
+ org.osgi.impl.framework.eclipse.jar, \
+ osgi.core.impls.jar
 
 btool.sources=false
 
