prebuild osgi before other prebuild projects

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -30,12 +30,12 @@ bin.includes = osgi.min.jar, \
   osgi.ri-tck.zip
   
 
-prebuild =  org.osgi.impl.framework.eclipse, \
+prebuild =  osgi, \
+  org.osgi.impl.framework.eclipse, \
   ${impls} , ${tests}, \
   org.osgi.test.cases.testtool, \
   org.osgi.test.tool, \
-  org.osgi.tools, \
-  osgi
+  org.osgi.tools
 
 # Used to run the director in a minimum OSGi framework
 include.osgi.min.jar = \
