remove references to old org.osgi.tools.btool project

--- a/org.osgi.tools/build.properties
+++ b/org.osgi.tools/build.properties
@@ -18,7 +18,7 @@ bin.includes = osgi.tools.jar, \
 
 expand.properties.jar = ${p}.properties
 
-expand.osgi.tools.jar = ${p}.csv2xml, ${p}.indexer, ${p}.jc, ${p}.xmldoclet, ${p}.jar2xml, \
+expand.osgi.tools.jar = ${p}.csv2xml, ${p}.jc, ${p}.xmldoclet, ${p}.jar2xml, \
   org.apache.bcel, \
   org.apache.bcel.classfile, \
   org.apache.bcel.generic, \
