use ees property from cnf/global.properties

--- a/osgi.specs/build.properties
+++ b/osgi.specs/build.properties
@@ -1,5 +1,4 @@
 custom = true
-before = ee.minimum, ee.foundation
+before = ${ees}
 javadoc= ${replace;${specs};^.+$;$0.*}
-ees= ee.foundation, ee.minimum
 ddf = vehiclebody, vehiclechassis, vehicleinterior, vehiclepowertrain
