--- a/org.osgi.test.cases.component/.classpath
+++ b/org.osgi.test.cases.component/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry exported="true" kind="src" path="/org.osgi.service.component"/>
 	<classpathentry kind="lib" path="/osgi.released/osgi.jar"/>
 	<classpathentry sourcepath="/ee.minimum" kind="lib" path="/osgi.released/ee.minimum.jar"/>
-	<classpathentry sourcepath="/org.osgi.test.cases/src" kind="lib" path="/osgi.released/osgi.internal.jar"/>
+	<classpathentry sourcepath="/osgi.released/osgi.internal.jar" kind="lib" path="/osgi.released/osgi.internal.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
