add javadoc target

--- a/osgi/build.properties
+++ b/osgi/build.properties
@@ -8,6 +8,7 @@ include.${p}.jar = about.html, \
   xmlns/scr/scr.xsd=../xmlns/scr/scr.xsd, \
   xmlns/app/app.xsd=../xmlns/app/app.xsd
 
+javadoc.cmpn.packagenames = ${replace;${cmpn.specs};^.*$;$0.*}
 expand.${p}.cmpn.jar = ${replace;$(cmpn.specs);.+;[$0.*]}
 include.${p}.cmpn.jar = about.html, \
   LICENSE, \
@@ -15,6 +16,7 @@ include.${p}.cmpn.jar = about.html, \
   xmlns/scr/scr.xsd=../xmlns/scr/scr.xsd, \
   xmlns/app/app.xsd=../xmlns/app/app.xsd
 
+javadoc.mobile.packagenames = ${replace;${mobile.specs};^.*$;$0.*}
 expand.${p}.mobile.jar = ${replace;$(mobile.specs);.+;[$0.*]}
 include.${p}.mobile.jar = about.html, \
   LICENSE, \
@@ -24,6 +26,7 @@ include.${p}.mobile.jar = about.html, \
   xmlns/dd/dd.xsd=../xmlns/dd/dd.xsd, \
   ddf=../ddf/mobile
 
+javadoc.core.packagenames = ${replace;${core.specs};^.*$;$0.*}
 expand.${p}.core.jar = ${replace;$(core.specs);.+;[$0]}
 include.${p}.core.jar = about.html, LICENSE
  
