--- a/osgi/build.xml
+++ b/osgi/build.xml
@@ -1,4 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="project" default="publish"> 
+	<target name="release" depends="master.release,javadoc">
+	</target>
+
+	<target name="javadoc">
+		<delete dir="${project.bindir}/javadoc"/>
+        <javadoc 
+			access="protected" 
+			windowtitle="OSGi Service Platform Release 4 Version 4.1"
+			author="false" 
+			classpath="${project.classpath}"
+			destdir="${project.bindir}/javadoc" 
+			nodeprecated="false" 
+			nodeprecatedlist="false" 
+			noindex="false" 
+			nonavbar="false" 
+			notree="false" 
+			packagenames="${javadoc.core.packagenames},${javadoc.cmpn.packagenames},${javadoc.mobile.packagenames}" 
+			source="1.3" 
+			sourcepath="${project.classpath}"
+			splitindex="true" 
+			use="false" 
+			version="false"
+			encoding="UTF-8"
+			docencoding="UTF-8"
+			charset="UTF-8">
+		    <classpath>
+      			<pathelement location="${workspace}/licensed/jar/servlet.jar"/>
+      			<pathelement location="${workspace}/osgi.released/ee.foundation.jar"/>
+    		</classpath>
+			<tag name="Immutable" scope="types" description="Immutable"/>
+			<tag name="ThreadSafe" scope="types" description="ThreadSafe"/>
+			<tag name="NotThreadSafe" scope="types" description="NotThreadSafe"/>
+			<tag name="GuardedBy" scope="methods,fields" description="Guarded By:"/>
+			<header><![CDATA[<b>OSGi&trade; Service Platform</b><br/><font  size=-1>Release 4 Version 4.1</font>]]></header>
+			<bottom><![CDATA[<font size=-1>Copyright &copy; OSGi Alliance (2000, 2007). All Rights Reserved. Licensed under the <a href="{@docRoot}/LICENSE.html">OSGi Specification License, Version 1.0</a></font>]]></bottom>
+			<doctitle><![CDATA[OSGi&trade; Service Platform Release 4 Version 4.1]]></doctitle>
+		</javadoc>
+		<copy file="${project}/OSGiSpecificationLicense-v10.html"
+		    tofile="${project.bindir}/javadoc/LICENSE.html"
+	    	verbose="${verbose}"
+	      	preservelastmodified="true" />
+    </target>
+
+	<target name="clean" depends="master.clean">
+		<delete dir="${project.bindir}/javadoc"/>
+	</target>
+
 	<import file="../cnf/build.xml"/>
 </project>
